--- a/jokenpo.css
+++ b/jokenpo.css
@@ -5,3 +5,43 @@ html,body{
 body{
   background-color: #d6d6d6;
 }
+#game {
+  display: flex;
+  flex-direction: column;
+  background-color: #a3a3a3;
+
+}
+#title{
+  text-align: center;
+  background-color: #7e7e7e;
+
+}
+#board{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #6b6b6b;
+
+}
+.game_field_space {
+  display: flex;
+  flex-direction: row;
+  background-color: #555555;
+  padding: 1em;
+
+}
+.move_options{
+  display: flex;
+  flex-direction: row;
+  background-color: #2c2c2c;
+  padding: 1em;
+  margin: 1em;
+}
+#messages{
+  background-color: #222222;
+}
+#notice{
+  text-align: center;
+  background-color: #777777;
+
+}
