--- a/jokenpo.css
+++ b/jokenpo.css
@@ -1,6 +1,9 @@
 html,body{
   margin: 0;
   padding: 0;
+  
+  /*https://fonts.google.com/specimen/PT+Sans+Caption?sidebar.open&selection.family=PT+Sans+Caption*/
+  font-family: 'PT Sans Caption', sans-serif;
 }
 body{
   background-color: #d6d6d6;
